<resources>
    <string name="app_name">Motion Layout Demo</string>
    <string name="action_settings">Settings</string>

    <string name="ground_truth_latitude">Your latitude</string>
    <string name="ground_truth_longitude">Your longitude</string>
    <string name="ground_truth_altitude">Your altitude in WGS84 (Optional)</string>
    <string name="set_ground_truth_title">Measure accuracy</string>
    <string name="set_ground_truth_subtitle">Tap on map or enter your real location</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
</resources>
